--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,10 @@ face_recognition==1.2.3
 opencv-python==4.4.0.44
 pandas==1.1.2
 gunicorn==20.0.4
-numpy
+click==7.1.2
+Flask==1.1.2
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+numpy==1.18.5
+Werkzeug==1.0.1
